--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+    <p>
+        HELLO GARIMA
+    </p>
     <div class="container" style="max-width: 720px; margin-top: 10px;">
         <div class= "header">
         <h1>Smart Photo Album</h1>
